Styles.css: code review; only vertical textarea-resizing; added hr, fieldset, text selection style; fixed and set control borders; modified line height and table th color; corrected input button styling; set line-height and alignment.

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,13 +1,40 @@
+/*
+html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
+}
+*/
+
 body {
     background-color: DarkSlateGray;
     font-family: Roboto;
     color: LightGray;
+    text-align: justify;
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+}
+
+fieldset {
+    border: 1px solid;
+    border-radius: 6px;
+    color: DarkGray;
+    margin: 0;
+    padding: 6px;
+}
+
+legend {
     text-align: left;
 }
 
-.formatter_table {
-    width: 100%;
-    text-align: center;
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid LightGray;
+    margin: 1em 0;
+    padding: 0;
+    border-color: DarkGray;
 }
 
 h1 {
@@ -33,34 +60,42 @@ a {
     color: LightGray;
 }
 
-.message {
-    color: DarkRed;
-    text-align: center;
-}
-
 textarea {
     width: 99%;
     border-radius: 6px;
+    border-color: DarkSlateGray;
+    background-color: LightGray;
+    font-family: Roboto;
+    font-size: 90%;
+    color: DarkSlateGray;
+    text-align: left;
+    resize: vertical;
+}
+
+select {
+    width: 100%;
+    border-radius: 6px;
+    border-color: DarkSlateGray;
     background-color: LightGray;
     font-family: Roboto;
     font-size: 90%;
     color: DarkSlateGray;
 }
 
-/*
-.table {
-    border: 1px solid DarkGray;
-    border-collapse: collapse;
+option:hover {
+    color: LightGray;
+    background-color: DarkGray;
+}
+
+.formatter_table {
     width: 100%;
     text-align: center;
 }
-.table_element {
-    border: 1px solid DarkGray;
-    border-collapse: collapse;
+
+.message {
+    color: DarkRed;
     text-align: center;
-    padding: 3px;
 }
-*/
 
 .table {
     border: 1px solid DarkGray;
@@ -79,16 +114,30 @@ textarea {
 
 .table_th {
     border-top: none;
+    color: DarkGray;
 }
 
 .table_th:first-child, .table_td:first-child {
      border-left: none;
 }
 
+input[type="submit"], input[type="button"] {
+    height: 32px;
+    width: 90%;
+    border: 1px solid;
+    border-radius: 6px;
+    border-color: DarkSlateGray;
+    background-color: LightGray;
+    font-family: Roboto;
+    font-size: 90%;
+    color: DarkSlateGray;
+}
+
 input[type="search"] {
     height: 25px;
     width: 90%;
     border-radius: 6px;
+    border-color: DarkSlateGray;
     background-color: LightGray;
     font-family: Roboto;
     font-size: 90%;
@@ -118,27 +167,14 @@ input[type="file"] {
     cursor: pointer;
 }
 
-select {
-    width: 100%;
-    border-radius: 6px;
-    background-color: LightGray;
-    font-family: Roboto;
-    font-size: 90%;
-    color: DarkSlateGray;
+::-moz-selection {
+  background: DarkGray;
+  color: DarkSlateGray;
+  text-shadow: none;
 }
 
-option:hover {
-    color: LightGray;
-    background-color: DarkGray;
-}
-
-input[type="submit"] {
-    height: 32px;
-    width: 90%;
-    border: 1px solid;
-    border-radius: 6px;
-    background-color: LightGray;
-    font-family: Roboto;
-    font-size: 90%;
-    color: DarkSlateGray;
+::selection {
+  background: DarkGray;
+  color: DarkSlateGray;
+  text-shadow: none;
 }
